# exchange_v2

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md
backend/: example-env.txt  main.py
backend/scripts/: db.py
backend/scripts/db/: admin.py
backend/src/: __init__.py  config.py
backend/src/api/: __init__.py  api.py  origins.py  tags_metadata.py
backend/src/bot/: __init__.py  bot.py  commands.py  fsm.py
backend/src/clients/: __init__.py  currency.py
backend/src/constants/: crypto.py  currency.py
backend/src/databases/: mysql_manager.py
backend/src/enums/: currency.py
backend/src/models/: crypto.py  crypto_subscribe.py  currency.py  currency_subscribe.py  telegram_user.py  user.py
backend/src/repositories/: crypto.py  crypto_subscribe.py  currency.py  currency_subscribe.py  telegram_user.py  user.py
backend/src/schemas/: __init__.py  exceptions.py  schemas.py
backend/src/services/: __init__.py  crypto.py  currency.py  email.py  phone_number.py  user.py
backend/src/types/: dependency_factory.py
backend/src/utils/: code.py  email.py  jwt.py  (+3 more)
frontend/: package-lock.json
frontend/src/: Router.jsx  api.js
migrations/versions/: 009103c7876b_update_telegram_user_foreign_key.py  0aa9aba2c9bf_user_password.py  34a6275f9726_crypto_currency_composit_keys.py  6626a1301f0b_initial_revision.py  89aa17e97088_phonenumber.py  da20c207a973_user_role.py  fcc8e8b0672f_update_foreign_keys.py
(+68 files in other folders)
